--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
+/storage
 
 .env.backup
-.phpunit.result.cache
+.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
